hphp/hack/test/typecheck/namespace_global_const1.php
<?hh

namespace {
  const string MYCONST = 'hi test';
}

namespace N {
  function f(): string {
    return MYCONST;
  }
}
